--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "hbs": "^4.2.0",
     "mongoose": "^6.2.1",
     "nodemailer": "^6.7.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "razorpay": "^2.8.0"
   }
 }
